# prophetverse

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  REPRODUCIBILITY_FIX_SUMMARY.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.py  sitemap.xml  test_refit.py  test_reproducibility.py  test_reproducibility_no_seed.py  test_reproducibility_simple.py  versions.json
.github/: .copilot-instructions.md  copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yaml  docs.yml  pre-release.yaml  release.yaml  release.yml
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/deprecation/: index.html
0.4.1/effects-api/: index.html
0.4.1/getting-started/: index.html
0.4.1/stylesheets/: extra.css
0.4.1/the-theory/: index.html
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/deprecation/: index.html
0.5.0/effects-api/: index.html
0.5.0/getting-started/: index.html
0.5.0/howto/: index.html
0.5.0/the-theory/: index.html
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/deprecation/: index.html
0.5.1/effects-api/: index.html
0.5.1/getting-started/: index.html
0.5.1/howto/: index.html
0.5.1/javascripts/: katex.js
0.5.1/mmm/: index.html
0.5.1/the-theory/: index.html
0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
0.6.0/deprecation/: index.html
0.6.0/effects-api/: index.html
0.6.0/getting-started/: index.html
0.6.0/howto/: index.html
0.6.0/mmm/: index.html
0.6.0/the-theory/: index.html
0.7.0/: 404.html  index.html  objects.inv  sitemap.xml
0.7.0/deprecation/: index.html
0.7.0/effects-api/: index.html
0.7.0/getting-started/: index.html
0.7.0/howto/: index.html
0.7.0/ipymd/: cell-style.css
0.7.0/mmm/: index.html
0.7.0/the-theory/: index.html
deprecation/: index.html
dev/: development.html  index.html  search.json  the-theory.html
dev/howto/: beta_percentage_forecast.html  composite_effects.html  custom_effects.html  custom_trend.html  effect_api_intro.html  index.html
dev/mmm/: adstock.html  budget_allocation.html  budget_allocation_panel.html  fitting_and_calibration.html  getting_familiar.html  index.html  mediators_and_frontdoor.html  mmm_dataset.html  proxy_variables.html  saturation_and_adstock.html
dev/prompts/: custom_effects.html
dev/reference/: BetaTargetLikelihood.html  BudgetOptimizer.html  ChainedEffects.html  ExactLikelihood.html  FlatTrend.html  GammaTargetLikelihood.html  GeometricAdstockEffect.html  HierarchicalProphet.html  HillEffect.html  LiftExperimentLikelihood.html  LinearEffect.html  LinearFourierSeasonality.html  LogEffect.html  MaximizeKPI.html  MaximizeROI.html  MichaelisMentenEffect.html  MinimizeBudget.html  MinimumTargetResponse.html  MultivariateNormal.html  NegativeBinomialTargetLikelihood.html  NormalTargetLikelihood.html  PiecewiseLinearTrend.html  PiecewiseLogisticTrend.html  Prophetverse.html  SharedBudgetConstraint.html  TotalBudgetConstraint.html  WeibullAdstockEffect.html  budget_optimization.BudgetOptimizer.html  index.html
dev/tutorials/: count_data.html  hierarchical.html  index.html  tuning.html  univariate.html
development/development-guide/: index.html
docs/: README.md  _brand.yml  _quarto.yml  deprecation.md  development.qmd  effects-api.md  getting-started.md  index.md  index.qmd  migration guide.md  objects.json  the-theory.md  the-theory.qmd  theory-introduction.md
docs/_site/: development.html  index.html  search.json  the-theory.html
docs/development/: development-guide.md
docs/examples/: count-data.ipynb  custom-effect.ipynb  custom-trend.ipynb  hierarchical.ipynb  univariate.ipynb
docs/howto/: autoregressive_component.qmd  beta_percentage_forecast.qmd  composite_effects.qmd  custom_effects.qmd  custom_trend.qmd  effect_api_intro.qmd  geo_hill_effect.qmd  index.md  index.qmd
docs/ipymd/: cell-style.css  custom-template.tpl  custom-template2.tpl  pandas.css
docs/javascripts/: katex.js
docs/mmm/: _sidebar.yml  adstock.qmd  budget_allocation.qmd  budget_allocation_panel.qmd  count_data.qmd  fitting_and_calibration.qmd  getting_familiar.qmd  index.md  index.qmd  lifttest.ipy  mediators_and_frontdoor.qmd  mmm_dataset.qmd  proxy_variables.qmd  saturation_and_adstock.qmd  script.py
docs/prompts/: custom_effects.qmd
docs/reference/: BetaTargetLikelihood.qmd  BudgetOptimizer.qmd  ChainedEffects.qmd  ExactLikelihood.qmd  FlatTrend.qmd  GammaTargetLikelihood.qmd  GeometricAdstockEffect.qmd  HierarchicalProphet.qmd  HillEffect.qmd  LiftExperimentLikelihood.qmd  LinearEffect.qmd  LinearFourierSeasonality.qmd  LogEffect.qmd  MaximizeKPI.qmd  MaximizeROI.qmd  MichaelisMentenEffect.qmd  MinimizeBudget.qmd  MinimumTargetResponse.qmd  MultivariateNormal.qmd  NegativeBinomialTargetLikelihood.qmd  NormalTargetLikelihood.qmd  PiecewiseLinearTrend.qmd  PiecewiseLogisticTrend.qmd  Prophetverse.qmd  SharedBudgetConstraint.qmd  TotalBudgetConstraint.qmd  WeibullAdstockEffect.qmd  _sidebar.yml  budget_optimization.BudgetOptimizer.qmd  effects.md  hierarchical_prophet.md  index.qmd  optimizers.md  prophet.md  trends.md
docs/stylesheets/: extra.css
docs/tutorials/: count_data.qmd  count_data_hurdle.qmd  hierarchical.qmd  hierarchical.quarto_ipynb  index.qmd  panel.qmd  script.py  tuning.qmd  univariate.qmd
effects-api/: index.html
examples/count-data/: index.html
examples/custom-effect/: index.html
examples/custom-trend/: index.html
examples/hierarchical/: index.html
extension_templates/: effect.py
getting-started/: index.html
latest/: development.html  index.html  search.json  the-theory.html
notebooks/: effects.ipynb  effects_multivariate.ipynb  multivariate.ipynb  univariate.ipynb
stylesheets/: extra.css
tests/: conftest.py  test_effects.py  test_engine.py  test_exogenous_priors.py  test_logistic.py  test_multiindex.py
the-theory/: index.html
v0.10.1/: search.json
v0.11.1/: search.json
v0.11.1-rc1/: search.json
v0.7.2/: search.json
v0.8.0/: search.json
v0.8.0-rc1/: search.json
v0.8.1/: search.json  styles.css
v0.9.0/: index.html  search.json
(+1804 files in other folders)
