[project]
name = "prophetverse"
version = "0.6.0"
description = "A multiverse of prophet models, for forecasting and Marketing Mix Modeling."
authors = [{ name = "Felipe Angelim", email = "felipeangelim@gmail.com" }]
requires-python = ">=3.9, <3.13"
readme = "README.md"
dependencies = [
    "sktime>=0.30.0",
    "numpyro<0.18",
    "optax>=0.2",
    "graphviz>=0.20.3,<0.21",
    "scikit-base>=0.12.0,<0.13",
    "skpro>=2.8.0,<3",
    "jupytext>=1.16.3,<2",
    "markdown-katex~=202406.1035",
    "python-markdown-math>=0.8,<0.9",
    "tabulate>=0.9.0,<0.10",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.26.0,<7.0.0",
    "pytest>=8.0.0,<9.0.0",
    "sphinx>=7.2.6,<8.0.0",
    "matplotlib>=3.8.2,<4.0.0",
    "mkdocs>=1.5.3,<2.0.0",
    "mkdocstrings-python>=1.9.0,<2.0.0",
    "mkdocs-jupyter>=0.24.6,<0.26.0",
    "pymdown-extensions>=10.7.1,<11.0.0",
    "mkdocs-material>=9.5.14,<10.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "pre-commit>=3.7.1,<5.0.0",
    "commitlint>=1.0.0,<2.0.0",
    "isort>=5.13.2,<7.0.0",
    "black>=24.4.2,<26.0.0",
    "pydocstyle>=6.3.0,<7.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pylint>=3.2.2,<4.0.0",
    "mkdocstrings>=0.28.1,<0.29",
    "mike>=2.1.3,<3",
    "seaborn>=0.13.2,<0.14",
    "statsmodels>=0.14.4,<0.15",
    "mkdocs-ipymd>=0.0.4,<0.0.5",
]

[tool.hatch.build.targets.sdist]
include = ["src/prophetverse"]

[tool.hatch.build.targets.wheel]
include = ["src/prophetverse"]

[tool.hatch.build.targets.wheel.sources]
"src/prophetverse" = "prophetverse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true
markers = [
    "ci: marks tests for Continuous Integration",
    "smoke: marks tests for smoke testing",
    ]

[tool.pre-commit]
