[tool.poetry]
name = "prophetverse"
version = "0.8.1"
description = "A multiverse of prophet models, for forecasting and Marketing Mix Modeling."
authors = ["Felipe Angelim <felipeangelim@gmail.com>"]
readme = "README.md"
packages = [{ include = "prophetverse", from="src"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
sktime = ">=0.30.0"
numpyro = "<0.19"
optax = ">=0.2.4"
graphviz = ">=0.20.3,<0.22.0"
scikit-base = "^0.12.0"
skpro = "^2.8.0"

ipykernel = { version = ">=6.26.0,<7.0.0", optional = true }
pytest = { version = ">=8.0.0,<9.0.0", optional = true }
sphinx = { version = ">=7.2.6,<8.0.0", optional = true }
matplotlib = { version = ">=3.8.2,<4.0.0", optional = true }
mkdocs = { version = ">=1.5.3,<2.0.0", optional = true }
mkdocstrings-python = { version = ">=1.9.0,<2.0.0", optional = true }
mkdocs-jupyter = { version = ">=0.24.6,<0.26.0", optional = true }
pymdown-extensions = { version = ">=10.7.1,<11.0.0", optional = true }
mkdocs-material = { version = ">=9.5.14,<10.0.0", optional = true }
pytest-cov = { version = ">=5.0.0,<7.0.0", optional = true }
pre-commit = { version = ">=3.7.1,<5.0.0", optional = true }
commitlint = { version = ">=1.0.0,<2.0.0", optional = true }
black = { version = ">=24.4.2,<26.0.0", optional = true }
isort = { version = ">=5.13.2,<7.0.0", optional = true }
pydocstyle = { version = ">=6.3.0,<7.0.0", optional = true }
mypy = { version = ">=1.10.0,<2.0.0", optional = true }
pylint = { version = ">=3.2.2,<4.0.0", optional = true }
mkdocstrings = { version = "^0.28.1", optional = true }
jupytext = {version = "^1.16.3", optional = true}
markdown-katex = {version = "^202406.1035", optional = true}
python-markdown-math = {version = "^0.8", optional = true}
tabulate = {version = "^0.9.0", optional = true}
mike = {version = "^2.1.3", optional = true}
mkdocs-ipymd = {version = "^0.0.4", optional = true}
seaborn = {version = "^0.13.2", optional = true}
statsmodels = {version = "^0.14.4", optional = true}
quartodoc = {version = ">=0.9.1,<0.12.0", optional = true}
jupyterlab = {version = "^4.4.2", optional = true}
pyyaml = {version = "^6.0.2", optional = true}


[tool.poetry.extras]
dev = [
    "ipykernel",
    "pytest",
    "matplotlib",
    "pytest-cov",
    "pre-commit",
    "commitlint",
    "isort",
    "black",
    "pydocstyle",
    "mypy",
    "pylint",
    "seaborn",
    "statsmodels",
    "quartodoc",
    "jupyterlab",
    "pyyaml"
]

[tool.poetry.group.dev.dependencies]



[tool.pytest.ini_options]
log_cli = true
markers = [
    "ci: marks tests for Continuous Integration",
    "smoke: marks tests for smoke testing",
    ]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pre-commit]
